--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     // ===== 설정 =====
     const API_KEY = "9324687641804625b06c41ca66f64089"; // 실제 사용 시 본인의 NEIS API 키를 사용하세요
     const DEFAULT_SCHOOL_NAME = "도촌초등학교";
-    const DEFAULT_ATPT = "J10"; // 경기도교육청
+    const DEFAULT_ATPT = "K10"; // 강원특별자치도도교육청
 
     // ===== 유틸리티 함수 =====
     const $ = (s) => document.querySelector(s);
@@ -435,3 +435,4 @@
   </script>
 </body>
 </html>
+
