--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       padding-top: var(--safe-top);
       padding-bottom: 8px;
     }
-    .appbar { display: flex; justify-content: space-between; align-items: center; gap: 12px; padding: 12px 0; }
+    .appbar { display: flex; justify-content: space-between; align-items: center; gap: 12px; padding: 12px 12px; }
     .brand .title { font-size: 24px; font-weight: 700; }
     .brand .sub { font-size: 14px; color: var(--muted); }
     .row { display: flex; align-items: center; gap: 10px; flex-wrap: wrap; }
@@ -435,4 +435,5 @@
   </script>
 </body>
 </html>
+
 
